--- a/express/public/index.html
+++ b/express/public/index.html
@@ -6,7 +6,23 @@
   <title>Document</title>
 </head>
 <body>
-<h1>Hello Maurya Jiii</h1>
+<form action="/contact" method="post">
+<h1>Contact us</h1>
+<div>
+  <label for="name">Name</label>
+  <input type="text" id="name" name="name">
+</div>
+<div>
+  <label for="name">Message</label>
+  <input type="textarea" id="message" name="message">
+</div>
+<button type="submit">Submit</button>
+
+
+
+
+
+</form>
   
 </body>
 </html>
