url shortner add node l 2

--- a/miniProject/url/public/index.html
+++ b/miniProject/url/public/index.html
@@ -41,10 +41,9 @@
 
 const url= formData.get('url');
 const shortcode= formData.get('shortcode');
-console.log(url);
-console.log(shortcode);
+console.log(url,shortcode);
 
-  // console.log(formData.get('url'));
+
 
 
   })
