--- a/miniProject/url/public/index.html
+++ b/miniProject/url/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -33,18 +33,37 @@
 </div>
 
 <script>
-
-    document.getElementById('shorten-form').addEventListener('submit',(event)=>{
+ document.getElementById('shorten-form').addEventListener('submit',async(event)=>{
     event.preventDefault();
 
    const formData= new FormData(event.target);
 
 const url= formData.get('url');
-const shortcode= formData.get('shortcode');
-console.log(url,shortcode);
+const shortCode= formData.get('shortCode');
+console.log(url,shortCode);
 
 
+try {
+const response = await fetch("/shorten",{
+  method:"POST",  
+ headers:{
+   'Content-Type': 'application/json'
+ },
+ body: JSON.stringify({url,shortCode})
+});
 
+if(response.ok){
+  alert("URL shortened successfully");
+}else{
+  const errorMessage=await response.text();
+  alert(errorMessage);
+}
+
+  
+} catch (error) {
+  console.log(error);
+  
+}
 
   })
 
@@ -52,5 +71,85 @@ console.log(url,shortcode);
 
 
   
+</body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>URL Shortener</title>
+</head>
+<body>
+  <div class="container">
+    <h1>URL Shortener</h1>
+    <form id="shorten-form">
+      <div>
+        <label for="url">Enter URL:</label>
+        <input type="url" id="url" name="url" required placeholder="Enter URL">
+      </div>
+      <div class="shortCode">
+        <label for="shortcode">Short Code:</label>
+        <input type="text" id="shortcode" name="shortcode" placeholder="Optional">
+      </div>
+      <button class="btn" type="submit">Shorten</button>
+    </form>
+
+    <h2>Shortened URL</h2>
+    <ul id="shortened-urls"></ul>
+  </div>
+
+  <script>
+    document.getElementById('shorten-form').addEventListener('submit', async (event) => {
+      event.preventDefault();
+
+      const formData = new FormData(event.target);
+      const url = formData.get('url');
+      const shortCode = formData.get('shortcode').trim(); // Trim extra spaces
+
+      console.log("Submitted URL:", url);
+      console.log("Submitted ShortCode:", shortCode);
+
+      try {
+        const response = await fetch("/shorten", {
+          method: "POST",
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            url,
+            shortcode: shortCode || undefined // only send if non-empty
+          })
+        });
+
+        if (response.ok) {
+          const result = await response.json();
+          alert("URL shortened successfully!");
+          event.target.reset(); // Reset form
+
+          // Optional: append to list
+          const list = document.getElementById('shortened-urls');
+          const li = document.createElement('li');
+          const shortenedURL = `${window.location.origin}/${result.shortCode}`;
+          li.innerHTML = `<a href="${shortenedURL}" target="_blank">${shortenedURL}</a>`;
+          list.appendChild(li);
+
+          // Clear form
+          event.target.reset();
+        } else {
+          const errorMessage = await response.text();
+          alert(errorMessage);
+        }
+
+      } catch (error) {
+        console.error("Error:", error);
+        alert("Something went wrong!");
+      }
+    });
+  </script>
 </body>
 </html>
